syntax = "proto3";

option csharp_namespace = "IntegrationAPI.Protos";
import "Protos/registerPharmacy.proto";

service gRPCService{
	rpc registerPharmacy (RegisterPharmacyRequest) returns (RegisterPharmacyResponse);
}